--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>Vite + Lit App</title>
 
   <script type="module" src="/src/s-button.ts"></script>
-  <script type="module" src="/src/s-tabs.ts"></script>
+  <script type="module" src="/src/s-nav.ts"></script>
   <script type="module" src="/src/s-details.ts"></script>
+  <script type="module" src="/src/s-accordion.ts"></script>
 
   <style>
     body {
@@ -24,16 +25,31 @@
 </head>
 
 <body>
-  <s-tabs>
-    <s-button slot="tab" id="/home" type="link" class="tab" active>Home</s-button>
-    <s-button slot="tab" id="/catalog" type="link" class="tab">Catalog</s-button>
-    <s-button slot="tab" id="/about" type="link" class="tab">About</s-button>
-  </s-tabs>
+  <s-nav direction="row">
+    <s-button slot="nav-item" id="/home" type="link" class="tab" active>Home</s-button>
+    <s-button slot="nav-item" id="/catalog" type="link" class="tab">Catalog</s-button>
+    <s-button slot="nav-item" id="/about" type="link" class="tab">About</s-button>
+  </s-nav>
 
   <s-details>
     <s-button slot="summary" type="link">Help</s-button>
     <span slot="content">Need help</span>
   </s-details>
+
+  <s-accordion>
+    <s-details id="1" slot="accordion-item">
+      <s-button slot="summary" type="link">Delivery</s-button>
+      <span slot="content">Delivery help</span>
+    </s-details>
+    <s-details id="2" slot="accordion-item">
+      <s-button slot="summary" type="link">Location</s-button>
+      <span slot="content">Location help</span>
+    </s-details>
+    <s-details id="3" slot="accordion-item">
+      <s-button slot="summary" type="link">Privacy polcy</s-button>
+      <span slot="content">Privacy policy help</span>
+    </s-details>
+  </s-accordion>
 
 </body>
 
